[project]
name = "circuitpython-keypad"
version = "1.0.0"
description = "Build custom USB HID keypads using microcontroller boards compatible with CircuitPython"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "circup>=2.1.2",
    "ruff>=0.9.10",
]
